--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.cloud.vault.token=hvs.rnmmD9q5I0zzjXm2RrcLzhLF
 spring.cloud.vault.kv.enabled=true
 spring.cloud.vault.kv.default-context=dev
 spring.cloud.vault.kv.backend=apiKey
-apiKey.book.key=${key:f70f8f81411b797487be12d599f9ac08}
+apiKey.book.key=${key}
