added graphql configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,8 @@ spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
-
-
-
 spring.jpa.database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
-
 
 spring.profiles.active=dev
 spring.application.name=weather-service
@@ -23,4 +19,11 @@ spring.cloud.vault.token=hvs.rnmmD9q5I0zzjXm2RrcLzhLF
 spring.cloud.vault.kv.enabled=true
 spring.cloud.vault.kv.default-context=dev
 spring.cloud.vault.kv.backend=apiKey
-apiKey.book.key=${key}
+apiKey.book.key=${key:f70f8f81411b797487be12d599f9ac08}
+
+#GRAPHQL
+spring.graphql.schema.printer.enabled=true
+spring.graphql.graphiql.enabled=true
+spring.graphql.cors.allowed-methods=true
+spring.graphql.cors.allowed-headers=true
+spring.graphql.cors.allowed-origins=true
